# world

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  ONCHAIN_ROADMAP.md  README.md
.agent/: rules.md
app/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
chain/: .gitignore  Anchor.toml  package.json
chain/programs/vbw/: Cargo.toml
chain/programs/vbw/src/: constants.rs  lib.rs
chain/programs/vbw/src/block/: block.rs
chain/programs/vbw/src/resource/: mod.rs  module.rs  texture.rs
chain/programs/vbw/src/world/: mod.rs
demo/: .gitignore  README.md  index.html  package-lock.json  package.json
deploy/: README.md  RELEASE.md  build.sh  dev.sh  publish-chain.sh  setup.sh
docs/: 00-overview.md  01-types.md  02-framework.md  03-block.md  03-string-particle-protocol.md  03-string-particle.md  04-ai-integration.md  05-time-dimension.md  06-inventory.md  07-efficiency.md  11-ai-builder.md  LICENSE  README.md  protocol.md
document/: engine.md  engine_cn.md  governance_cn.md  solana_contract.md  solana_contract_cn.md  world_cn.md
engine/: TODO.md  index.html  package-lock.json  package.json  sandbox.html  server.js  tsconfig.json  (+2 more)
reference/: Cargo.toml  README.md
reference/crates/septopus-conformance/: Cargo.toml
reference/crates/septopus-conformance/src/: hash.rs  main.rs
reference/crates/septopus-expand/: Cargo.toml
reference/crates/septopus-expand/src/: lib.rs  motif.rs  spp.rs
reference/crates/septopus-protocol/: Cargo.toml
reference/crates/septopus-protocol/src/: lib.rs
reference/crates/septopus-sim/: Cargo.toml
reference/crates/septopus-sim/src/: lib.rs
(+1010 files in other folders)
